@@ -260,6 +260,8 @@ Bug Fixes
 
 * LUCENE-9595: Make Component2D#withinPoint implementations consistent with ShapeQuery logic.
   (Ignacio Vera)   
+
+* LUCENE-9606: Wrap boolean queries generated by shape fields with a Constant score query. (Ignacio Vera)  
   
 Other
 ---------------------
